# articles_collect

./: .env-template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: common.yml  create-docker-image.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20250709_162257_create_articles_table.rs
projects/domain/: Cargo.toml
projects/domain/src/: articles.rs
projects/server/database/: Cargo.toml
projects/server/database/src/: articles_query.rs  lib.rs
projects/server/database/src/entities/: articles.rs  mod.rs  prelude.rs
web_app/: .gitignore  Cargo.toml
web_app/end2end/: playwright.config.ts
web_app/end2end/tests/: example.spec.ts
web_app/src/: app.rs  edit.rs  keycloak.rs  lib.rs  main.rs  routes.rs  server_router.rs  utils.rs
web_app/src/articles/: delete.rs  edit.rs  list.rs  mod.rs  single.rs
web_app/src/articles/delete/: list.rs  single.rs
web_app/src/model/: article.rs
web_app/src/utils/: busy_container.rs  dialog.rs  extensions.rs  screen_sizes.rs
