[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
domain = { path = "../projects/domain" }
database = { path = "../projects/server/database", optional = true }
migration = { path = "../migration", optional = true }

dotenv = { version = "0.15.0", optional = true }
uuid = { workspace = true, features = ["js", "serde", "v4"] }

leptos = { version = "0.8.10", features = ["nightly"] }
leptos_router = { version = "0.8.8", features = ["nightly"] }
leptos_axum = { version = "0.8.6", optional = true }
leptos_meta = { version = "0.8.5" }
leptos-use = "0.16.3"

axum = { version = "0.8", optional = true, features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
serde = { workspace = true, features = ["derive"] }
axum-keycloak-auth = { version = "0.8.3", optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["fs", "trace"], optional = true }

console_error_panic_hook = { version = "0.1", optional = true}
wasm-bindgen = { version = "=0.2.104", optional = true }
leptos_oidc = "0.9.0" # https://gitlab.com/kerkmann/leptos_oidc/-/tree/main

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", optional = true }
tracing-wasm = { version = "0.2.1", optional = true }

# headless_chrome = { version = "1.0.17", optional = true }
sea-orm = { workspace = true, optional = true, features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
anyhow = "1.0.100"
futures = "0.3.31"

[features]
hydrate = [
    "dep:tracing-wasm",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "leptos/hydrate",
]
ssr = [
    "dep:dotenv",
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:tracing-subscriber",
    # "dep:headless_chrome",
    "dep:sea-orm",
    "dep:migration",
    "dep:database",
    "dep:axum-keycloak-auth",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr"
]
